--- a/css/paginaPrincipal/estiloPaginaPrincipal.css
+++ b/css/paginaPrincipal/estiloPaginaPrincipal.css
@@ -407,3 +407,81 @@ footer{
     padding: 5px;
     background-color: rgb(255, 255, 255);
 }
+
+/*Cookies de la pagina*/
+.aviso-cookies {
+  position: fixed;
+  border-radius: 15px;
+  text-align: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 90%;
+  height: 20%;
+  margin-left: 5%;
+  background-color: rgba(126, 126, 126, 0.8);
+  border-style: solid;
+  border-color: #000000;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  transition: all ease 0.5s;
+  font-size: 20px;
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+.aviso-cookies:hover{
+  background-color: rgb(68, 68, 68);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 55%;
+  color: white;
+}
+
+.aviso-cookies form {
+  display: inline-block;
+}
+
+.aviso-cookies label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.cookiesCheck {
+  color: black;
+  font-size: 20px;
+  transition: all ease 0.5s;
+}
+
+.cookiesCheck:hover {
+  color: white;
+}
+
+#tituloCookies{
+  margin-top: 2%;
+  margin-bottom: 4%;
+  color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  z-index: 1;
+}
+
+@keyframes slidein {
+from {
+  margin-bottom: -30%;
+  width: 90%;
+  margin-left: 5%;
+}
+}
+
+/*Footer de la pagina*/
+footer{
+    bottom: 0;
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    padding: 5px;
+    background-color: rgb(255, 255, 255);
+}
