--- a/css/calendario/calendarioEstilo.css
+++ b/css/calendario/calendarioEstilo.css
@@ -15,6 +15,8 @@ body{
 
 .wrapper{
     width: 450px;
+    background-size:cover;
+    background-position: center;
     background-color: rgb(169, 255, 255);
     border-radius: 10px;
 }
@@ -27,6 +29,9 @@ body{
 }
 
 header .current-date{
+    border-radius: 20px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.925);
     font-size: 1.45rem;
     font-weight: 500;
 }
@@ -62,10 +67,14 @@ header .icons span:last-child{
 }
 
 .calendario .dias{
+    padding: 10px;
+    background-color: rgb(248, 217, 175,0.7);
+    border-radius: 10px;
     margin-bottom: 20px;
 }
 
 .calendario .semana li{
+    background-color: rgba(255, 206, 138, 0.9);
     font-weight: 500;
 }
 
